# blog_app_using_flask

./: .gitignore  HOW-TO.md  README.md  app.py  forms.py  pyproject.toml  requirements.txt  requirements_no_error.txt  run.py
docs/guidelines/: commit_message_guidelines.md
flaskblog/: __init__.py  config.py  forms.py  models.py  site.db
flaskblog/errors/: handlers.py
flaskblog/templates/: about.html  account.html  layout.html  login.html
flaskblog/templates/errors/: 403.html  404.html  500.html
templates/: about.html  home.html  layout.html  register.html
